src/style.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

:root {
  color-scheme: light dark;

  &[data-theme="dark"] {
    color-scheme: dark;
  }

  &[data-theme="light"] {
    color-scheme: light;
  }
}

/*
THEME CONFIG
*/

@theme {
  /* Resets */
  --aspect-*: initial;
  --text-*: initial;

  /* Font Size */
  --text-sm: clamp(0.8889rem, 0.8455rem + 0.2168vi, 1rem);
  --text-base: clamp(1rem, 0.9024rem + 0.4878vi, 1.25rem);
  --text-lg: clamp(1.125rem, 0.9543rem + 0.8537vi, 1.5625rem);
  --text-xl: clamp(1.2656rem, 0.9973rem + 1.3415vi, 1.9531rem);
  --text-2xl: clamp(1.4238rem, 1.0267rem + 1.9855vi, 2.4414rem);
  --text-3xl: clamp(1.6018rem, 1.036rem + 2.8292vi, 3.0518rem);

  /* Spacing */
  --spacing-custom: 4rem;

  /* Colours */
  --color-current: currentColor;
  --color-black: hsl(0, 0%, 2%);
  --color-white: hsl(0, 0%, 98%);

  --color-accent: light-dark(var(--color-blue-500), var(--color-blue-300));
  --color-accent-subtle: light-dark(
    var(--color-blue-300),
    var(--color-blue-100)
  );

  /* Aspect Ratios */
  --aspect-square: 1 / 1;
  --aspect-photo: 3 / 2;
  --aspect-photo\/portrait: 2 / 3;
  --aspect-landscape: 4 / 3;
  --aspect-video: 16 / 9;
  --aspect-phone: 9 / 16;
  --aspect-cinema: 1.85 / 1;
  --aspect-ultrawide: 18 / 5;

  /* Easings - @link https://www.easing.dev/ */
  --ease-anticipate: cubic-bezier(1, -0.4, 0.35, 0.95);
  --ease-linear: cubic-bezier(0, 0, 1, 1);
  --ease-out: cubic-bezier(0, 0, 0.58, 1);
  --ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
  --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
  --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
  --ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
  --ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
  --ease-out-circ: cubic-bezier(0.075, 0.82, 0.165, 1);
  --ease-out-overshoot: cubic-bezier(0.175, 0.885, 0.32, 1.275);
  --ease-out-quick: cubic-bezier(0, 0, 0.2, 1);
  --ease-out-swift: cubic-bezier(0.175, 0.885, 0.32, 1.1);
  --ease-out-snappy: cubic-bezier(0.19, 1, 0.22, 1);
  --ease-in: cubic-bezier(0.42, 0, 1, 1);
  --ease-in-quad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
  --ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
  --ease-in-quart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
  --ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
  --ease-in-expo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
  --ease-in-circ: cubic-bezier(0.6, 0.04, 0.98, 0.335);
  --ease-in-out: cubic-bezier(0.42, 0, 0.58, 1);
  --ease-in-out-base: cubic-bezier(0.25, 0.1, 0.25, 1);
  --ease-in-out-quad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
  --ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
  --ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
  --ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
  --ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
  --ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.15, 0.86);
}

/* 
BASE
Low-specificity, core defaults that apply to the whole project.
*/

@layer base {
  html {
    @apply bg-accent not-motion-reduce:scroll-smooth;
  }

  html,
  body {
    @apply overflow-x-hidden;
  }

  body {
    @apply relative min-h-screen bg-stone-50 py-32 text-base text-stone-900 transition-colors duration-150 dark:bg-stone-900 dark:text-stone-50;

    *,
    ::before,
    ::after {
      @apply border-stone-200 dark:border-stone-700;
    }
  }

  p {
    @apply max-w-prose;
  }

  p,
  li,
  figcaption {
    @apply text-pretty;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply max-w-[35ch];
  }

  h1,
  h2,
  h3 {
    @apply text-balance;
  }

  a {
    @apply whitespace-nowrap underline decoration-current underline-offset-2;

    &:hover {
      @apply text-accent;
    }
  }

  hr {
    @apply border-t border-t-stone-300 dark:border-t-stone-700;
  }

  mark,
  ::selection {
    @apply bg-amber-200 text-stone-900;
  }

  :focus:not(:focus-visible) {
    @apply outline-none;
  }

  :focus-visible {
    @apply rounded-[1px] outline-2 outline-offset-4 outline-inherit;
  }

  :target {
    @apply scroll-my-[4ex];
  }

  button {
    @apply inline-block cursor-pointer;
  }

  code {
    @apply bg-stone-200 px-1.5 py-0.5 dark:bg-stone-800;
  }
}

/* 
COMPONENTS
More complex, reusable design patterns that 
can be overridden with utility classes.
*/

@layer components {
  .rich-text {
    @apply prose prose-stone prose-h1:text-2xl prose-h2:text-xl prose-h3:text-lg prose-h4:text-base prose-p:text-base prose-p:prose-code:text-[85%] prose-code:before:content-none prose-code:after:content-none prose-p:text-stone-900 prose-headings:text-stone-900 prose-p:prose-code:text-accent prose-a:hover:text-stone-50 prose-a:hover:decoration-stone-900;
  }
  .rich-text {
    @apply dark:prose-invert prose-a:dark:hover:text-stone-900 prose-p:dark:text-stone-50 prose-headings:dark:text-stone-50 prose-a:dark:hover:decoration-stone-50;
  }

  .btn {
    @apply inline-flex items-center justify-center gap-1 rounded-sm border border-stone-300 bg-stone-300 px-3 py-1 text-center text-stone-900 no-underline dark:border-stone-700 dark:bg-stone-700 dark:text-stone-50 [&_svg]:size-4 [&_svg]:stroke-stone-900 dark:[&_svg]:stroke-stone-50;

    &:hover {
      @apply brightness-90;
    }
  }
}

/* 
UTILITIES
A collection of single-purpose utility classes.
*/

/* Wrapper */
@utility wrapper {
  --wrapper-max-w: var(--container-4xl);
  --wrapper-px: --spacing(4);

  @apply relative mx-auto max-w-[var(--wrapper-max-w)] px-[var(--wrapper-px)];
}
@utility wrapper-* {
  --wrapper-max-w: --value(--container-*);
}
@utility wrapper-px-* {
  --wrapper-px: --spacing(--value(number));
  --wrapper-px: --value(--spacing-*, [*]);
}

/* Cluster */
@utility cluster {
  --cluster-gap: --spacing(4);

  @apply flex flex-wrap items-center justify-start gap-[var(--cluster-gap)];
}
@utility cluster-* {
  --cluster-gap: --spacing(--value(number));
  --cluster-gap: --value(--spacing-*, [*]);
}

/* Repel */
@utility repel {
  @apply flex flex-wrap items-center justify-between gap-4;
}

/* Stack */
@utility stack {
  > :where(:not(.stack-ignore)) + :where(:not(.stack-ignore)) {
    --stack-space: 1em;
    @apply mt-[var(--stack-space)];
  }
}
@utility stack-* {
  > :where(:not(.stack-ignore)) + :where(:not(.stack-ignore)) {
    --stack-space: --spacing(--value(number));
    --stack-space: --value(--spacing-*, [*]);
  }
}
@utility stack-child-* {
  --stack-space: --spacing(--value(number));
  --stack-space: --value(--spacing-*, [*]);
}
@utility stack-ignore {
  @apply mt-0 contents;
}

/* Switcher */
@utility switcher {
  --switcher-width: 40rem;
  --switcher-gap: --spacing(4);

  @apply flex flex-wrap items-start gap-[var(--switcher-gap)];

  > * {
    @apply grow;
    flex-basis: calc((var(--switcher-width) - 100%) * 999);
  }

  > :nth-last-child(n + 5),
  > :nth-last-child(n + 5) ~ * {
    @apply basis-full;
  }
}
@utility switcher-* {
  --switcher-width: --value(--container-*, [*]);
}
@utility switcher-gap-* {
  --switcher-gap: --spacing(--value(number));
  --switcher-gap: --value(--spacing-*, [*]);
}

/* Frame */
@utility frame-* {
  @apply flex items-center justify-center overflow-hidden;
  aspect-ratio: --value(--aspect-*);

  > *,
  > img,
  > video {
    @apply h-full w-full object-cover;
  }
}

/* Stretch Link */
@utility stretch-link {
  &::after {
    @apply absolute inset-0 z-10 content-[''];
  }
}

/* Bleed */
@utility bleed-full {
  @apply ml-[50%] w-screen -translate-x-1/2;
}
@utility bleed-right {
  width: calc(50% + 50vw);
  width: calc(50% + 50cqw);
}
@utility bleed-left {
  width: calc(50% + 50vw);
  width: calc(50% + 50cqw);
  margin-left: calc(50% - 50vw);
  margin-left: calc(50% - 50cqw);
}

/* Skip Link */
@utility skip-link {
  @apply absolute top-4 left-4 z-[999] block size-px overflow-hidden p-4;
  clip: rect(1px, 1px, 1px, 1px);

  &:focus {
    @apply h-auto w-auto overflow-visible;
    clip: auto;
  }

  &:not(:focus) {
    @apply absolute m-0 h-auto w-px overflow-hidden border-none p-0 whitespace-nowrap;
    clip: rect(0 0 0 0);
  }
}

/* Reel */
@utility reel {
  @apply flex h-auto snap-x gap-4 overflow-hidden overflow-x-auto;
  -webkit-overflow-scrolling: touch;

  > * {
    @apply shrink-0;
  }

  > img {
    @apply h-full w-auto;
  }
}
@utility reel-snap-start {
  @apply snap-mandatory;

  > * {
    @apply snap-start;
  }
}
@utility reel-snap-center {
  @apply snap-mandatory;

  > * {
    @apply snap-center;
  }
}

